--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <form action="#" method="get">
             <div class="input-group">
                 <label for="entrada">Insira binário:</label><br>
-                <input type="number" name="entrada" id="entrada">
+                <input type="number" name="entrada" id="input">
                 <button>Converter</button>
             </div>
             <div class="input-group">
                 <label for="saida">Conversão para decimal:</label><br>
-                <input type="text" disabled name="saida" id="saida">
+                <input type="text" disabled name="saida" id="output">
             </div>
 
         </form>
